k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-demo
spec:
  ingressClassName: traefik
  rules:
    - host: app1.onprem.site
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service: { name: auth-service, port: { name: http } }
          - path: /api/users
            pathType: Prefix
            backend:
              service: { name: user-service, port: { name: http } }
          - path: /api/products
            pathType: Prefix
            backend:
              service: { name: product-service, port: { name: http } }
          - path: /
            pathType: Prefix
            backend:
              service: { name: frontend, port: { name: http } }
